<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="post_likes">Post likes</string>
    <string name="post_share">Post share</string>
    <string name="post_views">Post eye</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="post_text">Post text</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="edit_message">Edit Message</string>
    <string name="add_post">Add new post</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="chooser_share_post">Share</string>
    <string name="post_author">Me</string>
    <string name="post_published">Now</string>
    <string name="no_posts">no_posts</string>
    <string name="error_loading">error_loading</string>
    <string name="retry_loading">retry_loading</string>
    <string name="network_error">Network error!</string>
    <string name="newer_posts">Newer Posts</string>
    <string name="_1_of_1">1 of 1</string>
    <string name="login">enter login</string>
    <string name="enter_password">enter password</string>
    <string name="log_in">LogIn</string>
    <string name="enter_to_account">Enter account</string>
    <string name="enter_name">Enter name</string>
    <string name="repeat_pass">Repeat pass</string>
    <string name="sign_up">SignUp</string>
    <string name="create_account">Create account</string>
    <string name="google_play_unavailable">google play unavailable</string>
    <string name="channel_remote_name">channel remote name</string>
    <string name="channel_remote_description">channel remote description</string>
    <string name="notification_user_liked">Пользователь %1$s поставил лайк посту %2$s</string>
    <string name="notification_new_post">notification new post</string>


</resources>